test/libsolidity/syntaxTests/string/bin_as_identifier.sol
function g() pure {
    assembly { let bin := 1 }
}
// ----
// ParserError 2314: (39-42): Expected identifier but got 'ILLEGAL'
